--- a/defining-ai-discoverability.html
+++ b/defining-ai-discoverability.html
@@ -303,14 +303,16 @@
     </div>
   </main>
 
-  <footer>
-    <p>&copy; EntityWorks. All rights reserved.</p>
-    <p>
-      <a href="privacy.html">Privacy</a> &middot;
-      <a href="legal.html">Legal</a> &middot;
-      <a href="sitemap.xml">Sitemap</a> &middot;
-      <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>
-    </p>
-  </footer>
+<footer>
+  <p>&copy; EntityWorks. All rights reserved.</p>
+  <p>
+    <a href="privacy.html">Privacy</a> &middot;
+    <a href="legal.html">Legal</a> &middot;
+    <a href="resources.html">Resources Hub</a> &middot;
+    <a href="sitemap.xml">Sitemap</a> &middot;
+    <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>
+  </p>
+</footer>
+
 </body>
 </html>
