--- a/footer-home.html
+++ b/footer-home.html
@@ -1,21 +1,21 @@
-<footer>
-  <p>
-    <strong>EntityWorks Ltd</strong> 
-    Company No: 16849701 
-    82a James Carter Road, Mildenhall, Bury St. Edmunds, England, IP28 7DE 
+<footer style="max-width: 900px; margin: 3rem auto 2rem; padding: 0 1rem; text-align: left; font-size: 0.9rem; color: #333;">
+  <p style="margin: 0;">
+    <strong>EntityWorks Ltd</strong>
+    Company No: 16849701
+    82a James Carter Road, Mildenhall, Bury St. Edmunds, England, IP28 7DE
     <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>
   </p>
 
-  <p style="color:#777; margin-top:1rem;">
+  <p style="color:#777; margin: 0.75rem 0 0;">
     EntityWorks does not use cookies, analytics tools, or tracking technologies.
   </p>
 
-  <p style="margin-top:1rem;">
+  <p style="margin: 0.75rem 0 0;">
     <a href="/privacy.html">Privacy</a> &middot;
     <a href="/legal.html">Legal</a> &middot;
     <a href="/resources.html">Resources Hub</a> &middot;
     <a href="/sitemap.xml">Sitemap</a>
   </p>
 
-  <p style="margin-top:1rem;">&copy; 2025 EntityWorks Ltd. All rights reserved.</p>
+  <p style="margin: 0.75rem 0 0;">&copy; 2025 EntityWorks Ltd. All rights reserved.</p>
 </footer>
