moved company number

--- a/footer-home.html
+++ b/footer-home.html
@@ -1,8 +1,7 @@
 <footer style="max-width: 900px; margin: 3rem auto 2rem; padding: 0 1rem; text-align: left; font-size: 0.9rem; color: #333;">
   <p style="margin: 0;">
     <strong>EntityWorks Ltd</strong>
-    Company No: 16849701
-    82a James Carter Road, Mildenhall, Bury St. Edmunds, England, IP28 7DE
+    82a James Carter Road, Mildenhall, Bury St. Edmunds, England, IP28 7DE Company No: 16849701
     <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>
   </p>
 
