--- a/footer.html
+++ b/footer.html
@@ -1,26 +1,10 @@
-<footer style="margin-top: 3rem; padding-top: 1rem; border-top: 1px solid #ddd; 
-               font-size: 0.78rem; color: #777; line-height: 1.5; text-align: center;">
-
-  <p><strong>EntityWorks Ltd</strong></p>
-
+<footer>
+  <p>&copy; EntityWorks. All rights reserved.</p>
   <p>
-    Company No: 16849701<br>
-    82a James Carter Road, Mildenhall,<br>
-    Bury St. Edmunds, England, IP28 7DE<br>
-    Email: <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>
+    <a href="privacy.html">Privacy</a> &middot;
+    <a href="legal.html">Legal</a> &middot;
+    <a href="resources.html">Resources Hub</a> &middot;
+    <a href="sitemap.xml">Sitemap</a> &middot;
+    <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>
   </p>
-
-  <p style="margin-top: 1.3rem;">
-    <a href="/privacy.html" style="margin-right: 1rem;">Privacy</a>
-    <a href="/legal.html">Legal</a>
-  </p>
-
-  <p style="margin-top: 1.3rem; color: #aaa;">
-    EntityWorks does not use cookies, analytics tools, or tracking technologies.
-  </p>
-
-  <p style="margin-top: 1rem; color: #aaa;">
-    © EntityWorks Ltd. All rights reserved.
-  </p>
-
 </footer>
