--- a/ai-discoverability-resources.html
+++ b/ai-discoverability-resources.html
@@ -18,129 +18,160 @@
   <meta name="msapplication-TileColor" content="#0057ff">
   <meta name="theme-color" content="#ffffff">
 
-  <style>
-    :root {
-      --ew-max-width: 900px;
-      --ew-accent: #0057ff;
-      --ew-border: #e0e0e0;
-      --ew-bg-soft: #f5f7ff;
-      --ew-text: #111111;
-      --ew-muted: #666666;
-    }
+<style>
+  :root {
+    --ew-max-width: 900px;
+    --ew-accent: #0057ff;
+    --ew-border: #e0e0e0;
+    --ew-bg-soft: #f5f7ff;
+    --ew-text: #111111;
+    --ew-muted: #666666;
+  }
 
-    * {
-      box-sizing: border-box;
-    }
+  * {
+    box-sizing: border-box;
+  }
 
-    body {
-      margin: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      line-height: 1.6;
-      color: var(--ew-text);
-      background: #ffffff;
-    }
+  body {
+    margin: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+    line-height: 1.6;
+    color: var(--ew-text);
+    background: #ffffff;
+  }
 
-    .site-header {
-      border-bottom: 1px solid var(--ew-border);
-      background: #ffffff;
-    }
+  .site-header {
+    border-bottom: 1px solid var(--ew-border);
+    background: #ffffff;
+  }
 
-    .nav-inner {
-      max-width: var(--ew-max-width);
-      margin: 0 auto;
-      padding: 0.75rem 1rem;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 1rem;
-    }
+  .nav-inner {
+    max-width: var(--ew-max-width);
+    margin: 0 auto;
+    padding: 0.75rem 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1rem;
+  }
 
-    .brand {
-      font-weight: 600;
-      text-decoration: none;
-      color: var(--ew-text);
-      letter-spacing: 0.02em;
-    }
+  .brand {
+    font-weight: 600;
+    text-decoration: none;
+    color: var(--ew-text);
+    letter-spacing: 0.02em;
+  }
 
-    .site-nav {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 0.75rem;
-      font-size: 0.95rem;
-    }
+  .site-nav {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.75rem;
+    font-size: 0.95rem;
+  }
 
-    .site-nav a {
-      text-decoration: none;
-      color: var(--ew-text);
-      padding: 0.25rem 0.5rem;
-      border-radius: 999px;
-    }
+  .site-nav a {
+    text-decoration: none;
+    color: var(--ew-text);
+    padding: 0.25rem 0.5rem;
+    border-radius: 999px;
+  }
 
-    .site-nav a[aria-current="page"] {
-      background: var(--ew-bg-soft);
-      border: 1px solid var(--ew-accent);
-    }
+  .site-nav a[aria-current="page"] {
+    background: var(--ew-bg-soft);
+    border: 1px solid var(--ew-accent);
+  }
 
-    main {
-      max-width: var(--ew-max-width);
-      margin: 2rem auto;
-      padding: 0 1rem 3rem;
-    }
+  main {
+    max-width: var(--ew-max-width);
+    margin: 2rem auto;
+    padding: 0 1rem 3rem;
+  }
 
-    header.page-header {
-      margin-bottom: 2rem;
-    }
+  header.page-header {
+    margin-bottom: 2rem;
+  }
 
-    header.page-header h1 {
-      font-size: 2rem;
-      margin: 0 0 0.5rem;
-    }
+  header.page-header h1 {
+    font-size: 2rem;
+    margin: 0 0 0.5rem;
+  }
 
-    .intro {
-      margin-top: 0.5rem;
-      margin-bottom: 1.5rem;
-    }
+  .intro {
+    margin-top: 0.5rem;
+    margin-bottom: 1.5rem;
+  }
 
-    h2 {
-      margin-top: 2rem;
-      border-top: 1px solid var(--ew-border);
-      padding-top: 1.5rem;
-    }
+  h2 {
+    margin-top: 2rem;
+    border-top: 1px solid var(--ew-border);
+    padding-top: 1.5rem;
+  }
 
-    h3 {
-      margin-top: 1.25rem;
-    }
+  h3 {
+    margin-top: 1.25rem;
+  }
 
-    .definitions {
-      background: var(--ew-bg-soft);
-      border-left: 3px solid var(--ew-accent);
-      padding: 1rem;
-      margin: 1.5rem 0 2rem;
-    }
+  .definitions {
+    background: var(--ew-bg-soft);
+    border-left: 3px solid var(--ew-accent);
+    padding: 1rem;
+    margin: 1.5rem 0 2rem;
+  }
 
-    .definitions p {
-      margin: 0.35rem 0;
-    }
+  .definitions p {
+    margin: 0.35rem 0;
+  }
 
-    .toc {
-      margin: 1.5rem 0;
-      padding-left: 1.25rem;
-    }
+  .toc {
+    margin: 1.5rem 0;
+    padding-left: 1.25rem;
+  }
 
-    .toc li {
-      margin: 0.35rem 0;
-    }
+  .toc li {
+    margin: 0.35rem 0;
+  }
 
-    ul, ol {
-      padding-left: 1.25rem;
-    }
+  ul, ol {
+    padding-left: 1.25rem;
+  }
 
-    .meta {
-      font-size: 0.85rem;
-      color: var(--ew-muted);
-      margin-top: 3rem;
-    }
-  </style>
+  .meta {
+    font-size: 0.85rem;
+    color: var(--ew-muted);
+    margin-top: 3rem;
+  }
+
+  /* --------------------------------------------------
+     FOOTER (shared across all non-home pages)
+     -------------------------------------------------- */
+  .ew-footer {
+    border-top: 1px solid var(--ew-border);
+    margin-top: 3rem;
+    padding: 2rem 1rem;
+    text-align: left;
+    font-size: 0.8rem;
+    color: var(--ew-muted);
+  }
+
+  .ew-footer-inner {
+    max-width: var(--ew-max-width);
+    margin: 0 auto;
+  }
+
+  .ew-footer a {
+    color: var(--ew-muted);
+    text-decoration: none;
+    margin-right: 1rem;
+  }
+
+  .ew-footer a:hover {
+    text-decoration: underline;
+  }
+
+  .ew-footer p {
+    margin: 0.4rem 0;
+  }
+</style>
 
   <script type="application/ld+json">
   {
