style footer updarted

--- a/ai-discoverability-resources.html
+++ b/ai-discoverability-resources.html
@@ -141,35 +141,28 @@
     margin-top: 3rem;
   }
 
-  /* --------------------------------------------------
-     FOOTER (shared across all non-home pages)
-     -------------------------------------------------- */
-  .ew-footer {
-    border-top: 1px solid var(--ew-border);
-    margin-top: 3rem;
-    padding: 2rem 1rem;
-    text-align: left;
-    font-size: 0.8rem;
-    color: var(--ew-muted);
-  }
-
-  .ew-footer-inner {
+  /* Footer – align with main content column */
+  footer {
     max-width: var(--ew-max-width);
-    margin: 0 auto;
-  }
-
-  .ew-footer a {
+    margin: 0 auto 2rem;
+    padding: 0 1rem;
+    font-size: 0.85rem;
     color: var(--ew-muted);
+  }
+
+  footer p {
+    margin: 0.35rem 0;
+  }
+
+  footer a {
+    color: #0057b7;
     text-decoration: none;
-    margin-right: 1rem;
+    font-size: 0.85rem;
   }
 
-  .ew-footer a:hover {
+  footer a:hover,
+  footer a:focus {
     text-decoration: underline;
-  }
-
-  .ew-footer p {
-    margin: 0.4rem 0;
   }
 </style>
 
