footer layout update

--- a/ai-entity-collision-problem.html
+++ b/ai-entity-collision-problem.html
@@ -35,7 +35,30 @@
     }
     h2 {
       margin-top: 1.75rem;
-    }
+    }  /* Footer – align with main content column */
+  footer {
+    max-width: var(--ew-max-width);
+    margin: 0 auto 2rem;
+    padding: 0 1rem;
+    font-size: 0.85rem;
+    color: var(--ew-muted);
+  }
+
+  footer p {
+    margin: 0.35rem 0;
+  }
+
+  footer a {
+    color: #0057b7;
+    text-decoration: none;
+    font-size: 0.85rem;
+  }
+
+  footer a:hover,
+  footer a:focus {
+    text-decoration: underline;
+  }
+
   </style>
 
   <!-- STRUCTURED DATA -->
