--- a/ai-entity-collision-problem.html
+++ b/ai-entity-collision-problem.html
@@ -26,7 +26,7 @@
       padding: 0 1rem;
       color: #111;
     }
-    header, footer {
+    header {
       margin-bottom: 2rem;
     }
     header h1 {
@@ -35,30 +35,7 @@
     }
     h2 {
       margin-top: 1.75rem;
-    }  /* Footer – align with main content column */
-  footer {
-    max-width: var(--ew-max-width);
-    margin: 0 auto 2rem;
-    padding: 0 1rem;
-    font-size: 0.85rem;
-    color: var(--ew-muted);
-  }
-
-  footer p {
-    margin: 0.35rem 0;
-  }
-
-  footer a {
-    color: #0057b7;
-    text-decoration: none;
-    font-size: 0.85rem;
-  }
-
-  footer a:hover,
-  footer a:focus {
-    text-decoration: underline;
-  }
-
+    }
   </style>
 
   <!-- STRUCTURED DATA -->
@@ -243,7 +220,7 @@
 
   <p>
     This approach aligns with the principles that the EntityWorks Discoverability Index™ (EDI) formalises
-    within the discipline of AI Discoverability — clarity, consistency, structure, and interpretive stability —
+    within the discipline of AI Discoverability — clarity, consistency, structure, and interpretive stability — 
     even though the EDI was not applied here as a scoring mechanism.
   </p>
 </section>
@@ -269,12 +246,12 @@
   <h2>7. Conclusion</h2>
   <p>
     The misinterpretation was not specific to a single provider but reflected a structural behaviour
-    across multiple leading AI systems. By publishing clear, structured, machine-readable definitions —
+    across multiple leading AI systems. By publishing clear, structured, machine-readable definitions — 
     and ensuring consistent metadata — the problem was resolved.
   </p>
 
   <p>
-    This case illustrates both the need for, and the value of, deliberate AI-facing perceptual infrastructure —
+    This case illustrates both the need for, and the value of, deliberate AI-facing perceptual infrastructure — 
     the kind of structured work that EntityWorks exists to formalise and publish.
   </p>
 </section>
