--- a/ai-perception.html
+++ b/ai-perception.html
@@ -24,7 +24,9 @@
       --ew-muted: #666666;
     }
 
-    * { box-sizing: border-box; }
+    * {
+      box-sizing: border-box;
+    }
 
     body {
       margin: 0;
@@ -88,7 +90,9 @@
       margin-bottom: 0.25rem;
     }
 
-    h2 { margin-top: 1.75rem; }
+    h2 {
+      margin-top: 1.75rem;
+    }
 
     .placeholder {
       background: var(--ew-bg-soft);
@@ -102,47 +106,39 @@
       padding: 0;
     }
 
-    li { margin: 0.25rem 0; }
+    li {
+      margin: 0.25rem 0;
+    }
 
-    /* FOOTER (AI Perception page) */
-    .site-footer {
-      border-top: 1px solid var(--ew-border);
-      margin: 3rem auto 0;
+    .meta {
+      font-size: 0.85rem;
+      color: var(--ew-muted);
       max-width: var(--ew-max-width);
-      padding: 1.5rem 1rem 2rem;
+      margin: 0 auto 2rem;
+      padding: 0 1rem;
+    }
+
+    /* Footer – align shared footer.html block with main column */
+    footer {
+      max-width: var(--ew-max-width);
+      margin: 0 auto 2rem;
+      padding: 0 1rem;
       font-size: 0.85rem;
       color: var(--ew-muted);
     }
 
-    .footer-container {
-      display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-      justify-content: space-between;
-      gap: 1rem;
-    }
-
-    .footer-meta p {
+    footer p {
       margin: 0.35rem 0;
     }
 
-    .footer-nav-list {
-      list-style: none;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 0.75rem;
-      margin: 0;
-      padding: 0;
-    }
-
-    .footer-nav-link {
+    footer a {
+      color: #0057b7;
       text-decoration: none;
-      color: var(--ew-muted);
       font-size: 0.85rem;
     }
 
-    .footer-nav-link:hover,
-    .footer-nav-link:focus {
+    footer a:hover,
+    footer a:focus {
       text-decoration: underline;
     }
   </style>
@@ -261,27 +257,16 @@
     </section>
   </main>
 
-  <!-- FOOTER -->
-  <footer class="site-footer">
-    <div class="footer-container">
-      <div class="footer-meta">
-        <p>&copy; EntityWorks. All rights reserved.</p>
-        <p>
-          <a href="mailto:hello@entityworks.ai" class="footer-nav-link">hello@entityworks.ai</a>
-        </p>
-      </div>
+  <p class="meta">Last updated: November 2025.</p>
 
-      <nav aria-label="Footer">
-        <ul class="footer-nav-list">
-          <li><a href="/index.html" class="footer-nav-link">Home</a></li>
-          <li><a href="/why-entityworks-exists.html" class="footer-nav-link">Why EntityWorks</a></li>
-          <li><a href="/ai-discoverability-resources.html" class="footer-nav-link">AI Discoverability</a></li>
-          <li><a href="/how-we-score-the-edi.html" class="footer-nav-link">EDI</a></li>
-          <li><a href="/ai-perception.html" class="footer-nav-link">AI Perception</a></li>
-        </ul>
-      </nav>
-    </div>
-  </footer>
+  <div id="footer"></div>
+  <script>
+    fetch("/footer.html")
+      .then((response) => response.text())
+      .then((data) => {
+        document.getElementById("footer").innerHTML = data;
+      });
+  </script>
 
 </body>
 </html>
