--- a/position-on-ai-discoverability.html
+++ b/position-on-ai-discoverability.html
@@ -111,17 +111,12 @@
       padding: 0 1rem;
     }
 
-    /* Footer – align shared footer.html block with main column */
     footer {
       max-width: var(--ew-max-width);
       margin: 0 auto 2rem;
       padding: 0 1rem;
       font-size: 0.85rem;
       color: var(--ew-muted);
-    }
-
-    footer p {
-      margin: 0.35rem 0;
     }
 
     footer a {
@@ -237,26 +232,12 @@
 
   <p class="meta">Last updated: November 2025.</p>
 
-  <!-- THE CORRECT, FULL FOOTER -->
-  <footer>
-    <p>&copy; EntityWorks. All rights reserved.</p>
-    <p>
-      <a href="privacy.html">Privacy</a> &middot;
-      <a href="legal.html">Legal</a> &middot;
-      <a href="resources.html">Resources Hub</a> &middot;
-      <a href="sitemap.xml">Sitemap</a> &middot;
-      <a href="mailto:hello@entityworks.ai">hello@entityworks.ai</a>
-    </p>
-  </footer>
-
-  <!-- Footer fetch block -->
+  <!-- FETCHED FOOTER ONLY -->
   <div id="footer"></div>
   <script>
     fetch("/footer.html")
-      .then((response) => response.text())
-      .then((data) => {
-        document.getElementById("footer").innerHTML = data;
-      });
+      .then(r => r.text())
+      .then(d => { document.getElementById("footer").innerHTML = d; });
   </script>
 
 </body>
