removed ai-discovery and link

--- a/resources.html
+++ b/resources.html
@@ -274,11 +274,7 @@
             EntityWorks Lexicon
           </a>
         </li>
-        <li>
-          <a class="resource-link" href="/ai-discoverability-definitions.html">
-            Canonical AI Discoverability Definitions
-          </a>
-        </li>
+        <!-- REMOVED: ai-discoverability-definitions.html -->
       </ul>
     </section>
 
